# C-with-Vectors-Interpreter-Project

./: CMakeLists.txt  README.md
include/: exception.hpp  matrix.hpp  matrixHelpers.hpp  program.hpp  source.hpp
include/helpers/: exception.hpp  flagResolver.hpp  operators.hpp  position.hpp  positioner.hpp  socketWrapper.hpp  sourceFactory.hpp  sourceVisitator.hpp
include/interpreter/: evaluator.hpp  interpreter.hpp  interpreterHelpers.hpp  semanticAnalyzer.hpp
include/lexicalAnalyzer/: lexicalAnalyzer.hpp  lexicalTable.hpp  token.hpp
include/lexical_analyzer/: lexicalAnalyzer.hpp  lexicalTable.hpp  token.hpp
include/parser/: expressionNode.hpp  node.hpp  parser.hpp  statementNode.hpp
include/semanticAnalyzer/: semanticAnalyzer.hpp
src/: exception.cpp  main.cpp  matrix.cpp  matrixHelpers.cpp  matrixOperators.cpp  program.cpp  source.cpp
src/helpers/: exception.cpp  position.cpp  positioner.cpp  sourceFactory.cpp
src/interpreter/: evaluator.cpp  interpreter.cpp  interpreterHelpers.cpp  semanticAnalyzer.cpp
src/lexicalAnalyzer/: lexicalAnalyzer.cpp
src/lexical_analyzer/: lexicalAnalyzer.cpp
src/parser/: expressionNode.cpp  node.cpp  parser.cpp  statementNode.cpp
src/semanticAnalyzer/: semanticAnalyzer.cpp
tests/: CMakeLists.txt  evaluatorTest.cpp  flagResolverTests.cpp  interpreterTest.cpp  lexicalAnalyzerTest.cpp  matrixTests.cpp  parserTests.cpp  programTest.cpp  socketWrapperTests.cpp  sourceTest.cpp  test.cpp
tests/res/: aslas.mpp  assignments.mpp  clientTCP.hpp  condition.mpp  error1.mpp  error2.mpp  error3.mpp  error4.mpp  funCallOrAssignment.mpp  function.mpp  if.mpp  loop.mpp  matrix.mpp  sampleCode.mpp  sampleText.txt
